tests/errors/compiler/no_comma_or_end/no_end_in_array.c
int arr[] = { 1, 2

void main()
{

}
